--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-google-login": "^2.9.2",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
+    "redux-persist": "^4.8.2",
     "redux-thunk": "^2.2.0"
   }
 }
