--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "glamor": "^2.20.26",
     "glamorous": "^3.23.5",
     "react": "^15.6.1",
