implemented Conversations (without ChatInput nor scrolling)

--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "glamor": "^2.20.26",
+    "glamor": "^2.20.30",
     "glamorous": "^3.23.5",
+    "lodash.filter": "^4.6.0",
+    "lodash.find": "^4.6.0",
+    "lodash.sortby": "^4.7.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-google-login": "^2.9.2",
